Base for future portfolio

--- a/index.html
+++ b/index.html
@@ -3,16 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
+    <script src="./scripts/main.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Luis Lituma | Portfolio</title>
 </head>
 <body>
-    <h1>Luis Lituma</h1>
-    <p>Welcome to my portfolio website! Here you can find information about my projects, skills, and contact details.</p>
-    <h2>Projects</h2>
-    <ul>
-        <li>Project 1: Description of project 1.</li>
-        <li>Project 2: Description of project 2.</li>
-        <li>Project 3: Description of project 3.</li>
-    
+    <header>
+        <div id="menu">
+            <div id="logo">
+
+            </div>
+            <nav id="navigation">
+`               <ul>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <h1>Luis Lituma</h1>
+        <p>Welcome to my portfolio website! Here you can find information about my projects, skills, and contact details.</p>
+    </main>
+    <footer>
+        <p>Contact me at: info@luislituma.com</p>
+        <p>&copy; 2026 Luis Lituma</p>
+
+    </footer>
 </body>
 </html>
